--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: minima
+remote_theme: pages-themes/tactile@v0.2.0
 title: "Mikaels GitHub Page"
 author: Mikael Andersson
+plugins:
+- jekyll-remote-theme
